// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimelineItem component renders correctly with children 1`] = `
<DocumentFragment>
  <div
    class="timelineItem"
  >
    <h2
      class="timelineItem__title"
    >
      some title
    </h2>
    <div
      class="timelineItem__date"
    >
      <time
        datetime="1986-02-11"
      >
        11 February 1986
      </time>
        
    </div>
    <div>
      test
    </div>
  </div>
</DocumentFragment>
`;

exports[`TimelineItem component renders correctly with dark mode 1`] = `
<DocumentFragment>
  <div
    class="timelineItem timelineItem--dark"
  >
    <h2
      class="timelineItem__title"
    >
      some title
    </h2>
    <div
      class="timelineItem__date"
    >
      <time
        datetime="1986-02-11"
      >
        11 February 1986
      </time>
        
    </div>
  </div>
</DocumentFragment>
`;

exports[`TimelineItem component renders correctly without dark mode 1`] = `
<DocumentFragment>
  <div
    class="timelineItem"
  >
    <h2
      class="timelineItem__title"
    >
      some title
    </h2>
    <div
      class="timelineItem__date"
    >
      <time
        datetime="1986-02-11"
      >
        11 February 1986
      </time>
        
    </div>
  </div>
</DocumentFragment>
`;
